# heavyai-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  generate_thrift_bindings.sh
docker/: Dockerfile
examples/query_print/: Cargo.toml  README.md
examples/query_print/src/: main.rs
src/: common.rs  completion_hints.rs  extension_functions.rs  heavy.rs  lib.rs  mapd.rs  omnisci.rs  serialized_result_set.rs
src/thrift_generated/: common.rs  completion_hints.rs  extension_functions.rs  mapd.rs  mod.rs  serialized_result_set.rs
tests/: api_test.rs  integration_test.rs
